// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check supported path a.{b.c}.{d.e} 1`] = `
Array [
  "a",
  "{b",
  "c}",
  "{d",
  "e}",
]
`;

exports[`check supported path a\\.b.c.d.e 1`] = `
Array [
  "a.b",
  "c",
  "d",
  "e",
]
`;

exports[`check supported path allow keys to be whitespace 1`] = `
Array [
  "a",
  " ",
  "a",
]
`;

exports[`check supported path array 1`] = `
Array [
  "b",
  "c",
  "d",
]
`;

exports[`check supported path b.c.d 1`] = `
Array [
  "b",
  "c",
  "d",
]
`;

exports[`check supported path e\\.f\\.g 1`] = `
Array [
  "e.f.g",
]
`;

exports[`check supported path symbol 1`] = `
Array [
  Symbol(foo),
]
`;
